style: add object-fit cover to sidebar avatar to prevent squishing of non-square images

--- a/assets/sass/_sidebar.scss
+++ b/assets/sass/_sidebar.scss
@@ -35,6 +35,7 @@
     img {
       width: 80px;
       height: 80px;
+      object-fit: cover;
       border-radius: 50%;
       margin: 0 auto $space-md;
       display: block;
